# myupyide

./: README.md  editor.py  mypyIDE.py  mypyboard.py  pyboard.py  pyproject.toml  requirements.txt  sync.py  terminal.py
src/myupyide/: __init__.py  app.py  commander.py  editor.py  highlight.py  multirownotebook.py  mypyboard.py  mypyide.py  settings.py  share_serial.py  sync.py  terminal.py
